(lang dune 3.14)

(name h3)

(generate_opam_files true)

(source
 (github travisbrady/ocaml-h3))

(authors "Travis Brady <travis.brady@gmail.com>")

(maintainers "Travis Brady <travis.brady@gmail.com>")

(license "Apache V2")

(documentation https://url/to/documentation)

(package
 (name h3)
 (synopsis "")
 (description "")
 (depends ocaml alcotest)
 (tags
  (image gif bitmap)))
